--- a/pom.xml
+++ b/pom.xml
@@ -87,10 +87,12 @@
     <distMgmtStagingName>Sonatype Release Distribution Repository</distMgmtStagingName>
     <distMgmtStagingUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2</distMgmtStagingUrl>
 
-    <guava.version>18.0</guava.version>
+    <antlr.version>4.9.3</antlr.version>
+    <guava.version>28.2-jre</guava.version>
     <slf4j.version>1.7.12</slf4j.version>
     <jackson.version>2.9.10</jackson.version>
-    <jackson-databind.version>2.9.10.5</jackson-databind.version>
+    <jackson-databind.version>2.9.10.8</jackson-databind.version>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <gpg.useagent>true</gpg.useagent>
@@ -119,7 +121,7 @@
         <plugin>
           <groupId>org.antlr</groupId>
           <artifactId>antlr4-maven-plugin</artifactId>
-          <version>4.5</version>
+          <version>${antlr.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -237,7 +239,7 @@
       <dependency>
         <groupId>org.antlr</groupId>
         <artifactId>antlr4-runtime</artifactId>
-        <version>4.5</version>
+        <version>${antlr.version}</version>
         <exclusions>
           <exclusion>
             <artifactId>org.abego.treelayout.core</artifactId>
@@ -289,13 +291,13 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
+        <version>4.13.1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>1.1.3</version>
+        <version>1.2.0</version>
         <scope>provided</scope>
       </dependency>
     </dependencies>
