--- a/pom.xml
+++ b/pom.xml
@@ -76,9 +76,9 @@
   </distributionManagement>
 
   <!-- When the version is updated, ensure that the property 'ojai.version' is also updated with the same literal string -->
-  <version>3.1</version>
+  <version>3.1.1</version>
   <properties>
-    <ojai.version>3.1</ojai.version>
+    <ojai.version>3.1.1</ojai.version>
 
     <distMgmtSnapshotsId>ossrh</distMgmtSnapshotsId>
     <distMgmtSnapshotsName>Sonatype Snapshot Repository</distMgmtSnapshotsName>
@@ -87,10 +87,11 @@
     <distMgmtStagingName>Sonatype Release Distribution Repository</distMgmtStagingName>
     <distMgmtStagingUrl>https://oss.sonatype.org/service/local/staging/deploy/maven2</distMgmtStagingUrl>
 
-    <guava.version>18.0</guava.version>
+    <guava.version>28.2-jre</guava.version>
     <slf4j.version>1.7.12</slf4j.version>
     <jackson.version>2.9.10</jackson.version>
-    <jackson-databind.version>2.9.10.1</jackson-databind.version>
+    <jackson-databind.version>2.9.10.8</jackson-databind.version>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <gpg.useagent>true</gpg.useagent>
@@ -289,13 +290,13 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.12</version>
+        <version>4.13.1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
-        <version>1.1.3</version>
+        <version>1.2.0</version>
         <scope>provided</scope>
       </dependency>
     </dependencies>
