--- a/java/map-reduce/pom.xml
+++ b/java/map-reduce/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.ojai</groupId>
     <artifactId>ojai-root</artifactId>
-    <version>3.2-SNAPSHOT</version>
+    <version>3.2.0</version>
     <relativePath>../..</relativePath>
   </parent>
 
